// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pathway Routes DELETE /api/v1/pathways/:id should return 401 when not authenticated 1`] = `
{
  "error": {
    "message": "Authentication required",
  },
  "success": false,
}
`;

exports[`Pathway Routes DELETE /api/v1/pathways/:id should return 404 for non-existent pathway 1`] = `
{
  "error": {
    "message": "Pathway not found",
  },
  "success": false,
}
`;

exports[`Pathway Routes GET /api/v1/pathways should get all pathways with default pagination with authentication 1`] = `
{
  "pagination": {
    "page": 1,
    "pages": 2,
    "total": 16,
  },
  "pathways": [
    {
      "__v": 0,
      "_id": "68089c96c6ec5176a95ca7d1",
      "description": "Test Description",
      "name": "Test Pathway",
      "owner": {
        "_id": "68089c96c6ec5176a95ca7cd",
        "name": "Test User",
      },
    },
    {
      "__v": 0,
      "_id": "68089c96c6ec5176a95ca7d3",
      "description": "Description 1",
      "name": "Pathway 1",
      "owner": {
        "_id": "68089c96c6ec5176a95ca7cf",
        "name": "Another User",
      },
    },
    {
      "__v": 0,
      "_id": "68089c96c6ec5176a95ca7d4",
      "description": "Description 2",
      "name": "Pathway 2",
      "owner": {
        "_id": "68089c96c6ec5176a95ca7cd",
        "name": "Test User",
      },
    },
    {
      "__v": 0,
      "_id": "68089c96c6ec5176a95ca7d5",
      "description": "Description 3",
      "name": "Pathway 3",
      "owner": {
        "_id": "68089c96c6ec5176a95ca7cf",
        "name": "Another User",
      },
    },
    {
      "__v": 0,
      "_id": "68089c96c6ec5176a95ca7d6",
      "description": "Description 4",
      "name": "Pathway 4",
      "owner": {
        "_id": "68089c96c6ec5176a95ca7cd",
        "name": "Test User",
      },
    },
    {
      "__v": 0,
      "_id": "68089c96c6ec5176a95ca7d7",
      "description": "Description 5",
      "name": "Pathway 5",
      "owner": {
        "_id": "68089c96c6ec5176a95ca7cf",
        "name": "Another User",
      },
    },
    {
      "__v": 0,
      "_id": "68089c96c6ec5176a95ca7d8",
      "description": "Description 6",
      "name": "Pathway 6",
      "owner": {
        "_id": "68089c96c6ec5176a95ca7cd",
        "name": "Test User",
      },
    },
    {
      "__v": 0,
      "_id": "68089c96c6ec5176a95ca7d9",
      "description": "Description 7",
      "name": "Pathway 7",
      "owner": {
        "_id": "68089c96c6ec5176a95ca7cf",
        "name": "Another User",
      },
    },
    {
      "__v": 0,
      "_id": "68089c96c6ec5176a95ca7da",
      "description": "Description 8",
      "name": "Pathway 8",
      "owner": {
        "_id": "68089c96c6ec5176a95ca7cd",
        "name": "Test User",
      },
    },
    {
      "__v": 0,
      "_id": "68089c96c6ec5176a95ca7db",
      "description": "Description 9",
      "name": "Pathway 9",
      "owner": {
        "_id": "68089c96c6ec5176a95ca7cf",
        "name": "Another User",
      },
    },
  ],
}
`;

exports[`Pathway Routes GET /api/v1/pathways should get all pathways with default pagination without authentication 1`] = `
{
  "pagination": {
    "page": 1,
    "pages": 2,
    "total": 16,
  },
  "pathways": [
    {
      "__v": 0,
      "_id": "68089c96c6ec5176a95ca7b6",
      "description": "Test Description",
      "name": "Test Pathway",
      "owner": {
        "_id": "68089c96c6ec5176a95ca7b0",
        "name": "Test User",
      },
    },
    {
      "__v": 0,
      "_id": "68089c96c6ec5176a95ca7b8",
      "description": "Description 1",
      "name": "Pathway 1",
      "owner": {
        "_id": "68089c96c6ec5176a95ca7b4",
        "name": "Another User",
      },
    },
    {
      "__v": 0,
      "_id": "68089c96c6ec5176a95ca7b9",
      "description": "Description 2",
      "name": "Pathway 2",
      "owner": {
        "_id": "68089c96c6ec5176a95ca7b0",
        "name": "Test User",
      },
    },
    {
      "__v": 0,
      "_id": "68089c96c6ec5176a95ca7ba",
      "description": "Description 3",
      "name": "Pathway 3",
      "owner": {
        "_id": "68089c96c6ec5176a95ca7b4",
        "name": "Another User",
      },
    },
    {
      "__v": 0,
      "_id": "68089c96c6ec5176a95ca7bb",
      "description": "Description 4",
      "name": "Pathway 4",
      "owner": {
        "_id": "68089c96c6ec5176a95ca7b0",
        "name": "Test User",
      },
    },
    {
      "__v": 0,
      "_id": "68089c96c6ec5176a95ca7bc",
      "description": "Description 5",
      "name": "Pathway 5",
      "owner": {
        "_id": "68089c96c6ec5176a95ca7b4",
        "name": "Another User",
      },
    },
    {
      "__v": 0,
      "_id": "68089c96c6ec5176a95ca7bd",
      "description": "Description 6",
      "name": "Pathway 6",
      "owner": {
        "_id": "68089c96c6ec5176a95ca7b0",
        "name": "Test User",
      },
    },
    {
      "__v": 0,
      "_id": "68089c96c6ec5176a95ca7be",
      "description": "Description 7",
      "name": "Pathway 7",
      "owner": {
        "_id": "68089c96c6ec5176a95ca7b4",
        "name": "Another User",
      },
    },
    {
      "__v": 0,
      "_id": "68089c96c6ec5176a95ca7bf",
      "description": "Description 8",
      "name": "Pathway 8",
      "owner": {
        "_id": "68089c96c6ec5176a95ca7b0",
        "name": "Test User",
      },
    },
    {
      "__v": 0,
      "_id": "68089c96c6ec5176a95ca7c0",
      "description": "Description 9",
      "name": "Pathway 9",
      "owner": {
        "_id": "68089c96c6ec5176a95ca7b4",
        "name": "Another User",
      },
    },
  ],
}
`;

exports[`Pathway Routes GET /api/v1/pathways should get pathways with custom pagination 1`] = `
{
  "pagination": {
    "page": 2,
    "pages": 4,
    "total": 16,
  },
  "pathways": [
    {
      "__v": 0,
      "_id": "68089c96c6ec5176a95ca7f2",
      "description": "Description 5",
      "name": "Pathway 5",
      "owner": {
        "_id": "68089c96c6ec5176a95ca7ea",
        "name": "Another User",
      },
    },
    {
      "__v": 0,
      "_id": "68089c96c6ec5176a95ca7f3",
      "description": "Description 6",
      "name": "Pathway 6",
      "owner": {
        "_id": "68089c96c6ec5176a95ca7e8",
        "name": "Test User",
      },
    },
    {
      "__v": 0,
      "_id": "68089c96c6ec5176a95ca7f4",
      "description": "Description 7",
      "name": "Pathway 7",
      "owner": {
        "_id": "68089c96c6ec5176a95ca7ea",
        "name": "Another User",
      },
    },
    {
      "__v": 0,
      "_id": "68089c96c6ec5176a95ca7f5",
      "description": "Description 8",
      "name": "Pathway 8",
      "owner": {
        "_id": "68089c96c6ec5176a95ca7e8",
        "name": "Test User",
      },
    },
    {
      "__v": 0,
      "_id": "68089c96c6ec5176a95ca7f6",
      "description": "Description 9",
      "name": "Pathway 9",
      "owner": {
        "_id": "68089c96c6ec5176a95ca7ea",
        "name": "Another User",
      },
    },
  ],
}
`;

exports[`Pathway Routes GET /api/v1/pathways/:id should get a pathway by id with authentication 1`] = `
{
  "pathway": {
    "__v": 0,
    "_id": "68089c97c6ec5176a95ca821",
    "description": "Test Description",
    "modules": [],
    "name": "Test Pathway",
    "owner": {
      "_id": "68089c97c6ec5176a95ca81d",
      "name": "Test User",
    },
  },
}
`;

exports[`Pathway Routes GET /api/v1/pathways/:id should get a pathway by id without authentication 1`] = `
{
  "pathway": {
    "__v": 0,
    "_id": "68089c97c6ec5176a95ca807",
    "description": "Test Description",
    "modules": [],
    "name": "Test Pathway",
    "owner": {
      "_id": "68089c96c6ec5176a95ca803",
      "name": "Test User",
    },
  },
}
`;

exports[`Pathway Routes GET /api/v1/pathways/:id should return 400 for invalid id format 1`] = `
{
  "error": {
    "message": "Invalid pathway ID format",
  },
  "success": false,
}
`;

exports[`Pathway Routes GET /api/v1/pathways/:id should return 404 for non-existent pathway 1`] = `
{
  "error": {
    "message": "Pathway not found",
  },
  "success": false,
}
`;

exports[`Pathway Routes PATCH /api/v1/pathways/:id should return 401 when not authenticated 1`] = `
{
  "error": {
    "message": "Authentication required",
  },
  "success": false,
}
`;

exports[`Pathway Routes PATCH /api/v1/pathways/:id should return 404 for non-existent pathway 1`] = `
{
  "error": {
    "message": "Pathway not found",
  },
  "success": false,
}
`;

exports[`Pathway Routes POST /api/v1/pathways should return 400 if required fields are missing 1`] = `
{
  "error": {
    "message": "Validation error: description: must have required property 'description'",
  },
  "success": false,
}
`;

exports[`Pathway Routes POST /api/v1/pathways should return 401 when not authenticated 1`] = `
{
  "error": {
    "message": "Authentication required",
  },
  "success": false,
}
`;
